# Jaeger

./: .gitignore  .travis.yml  CMakeLists.txt  credits  data.json  gui.json  icons.json  items.json  main.cpp  projectiles.json  tiles.json
scripts/: cf.sh  travis.sh
src/: Attribute.cpp  Attribute.h  Character.cpp  Character.h  Controlable.cpp  Controlable.h  Creature.cpp  Creature.h  Faction.cpp  Faction.h  GameObject.cpp  GameObject.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemBag.h  Logger.h  PathFinder.cpp  PathFinder.h  Perlin2D.h  SpellEffect.cpp  SpellEffect.h  TilePos.cpp  TilePos.h  Vec2.cpp  Vec2.h  fsa.h  stb_perlin.cpp  stb_perlin.h  stlastar.h
src/ai/: AITask.cpp  AITask.h  BuyGroceriesTask.cpp  BuyGroceriesTask.h  CombatTask.cpp  CombatTask.h  DefenseTask.cpp  DefenseTask.h  Faction.cpp  Faction.h  FarmerTask.cpp  FarmerTask.h  FarmerWifeTask.cpp  FarmerWifeTask.h  HuntTask.cpp  HuntTask.h  ListTask.cpp  ListTask.h  SellTask.cpp  SellTask.h  VillageGuardTask.cpp  VillageGuardTask.h  WaitTask.cpp  WaitTask.h  WalkTask.cpp  WalkTask.h
src/combat/: Projectile.cpp  Projectile.h
src/controls/: GameUI.cpp  GameUI.h  InventoryWindow.cpp  InventoryWindow.h  PlayerControls.cpp  PlayerControls.h  StatusBar.cpp  StatusBar.h
src/gamedata/: GameData.cpp  GameData.h  ItemData.cpp  ItemData.h  ItemGroup.cpp  ItemGroup.h  ProjectileData.cpp  ProjectileData.h  RandomRange.cpp  RandomRange.h  TextureAtlas.h  TileData.cpp  TileData.h
src/items/: Inventory.cpp  Inventory.h  Item.cpp  Item.h
src/level/: Level.cpp  Level.h  LevelConnection.cpp  LevelConnection.h  LevelGen.cpp  LevelGen.h  Tile.cpp  Tile.h  TileExtraInfo.cpp  TileExtraInfo.h  TileMap.h  TileRect.cpp  TileRect.h  World.cpp  World.h  WorldGen.cpp  WorldGen.h
src/ui/: CharacterUI.h
src/utils/: WeightedRandomChooser.cpp  WeightedRandomChooser.h
unittests/: AttributeTest.cpp  CMakeLists.txt  DummyTest.cpp  RandomRangeTest.cpp
